--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "custom-command github/push"
   },
   "dependencies": {
+    "@nuxtjs/gtm": "^2.4.0",
     "@nuxtjs/yandex-metrika": "^1.4.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
